module(
    name = "goclassifieds",
    version = "1.0.0",  # Use an appropriate version number
)

# Add Bazel dependencies for rules
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_nodejs", version = "6.3.5")

# Archive override for external dependencies not yet using Bazel module system
#archive_override(
#    module_name = "rules_oci",
#    urls = ["https://github.com/bazel-contrib/rules_oci/releases/download/v0.4.0/rules_oci-v0.4.0.tar.gz"],
#    strip_prefix = "rules_oci-0.4.0",
#    integrity = "sha256-d7b0760ba28554b71941ea0bbfd0a9f089bf250fd4448f9c116e1cb7a63b3933",
#)