module(
    name = "goclassifieds",
    version = "1.0.0",  # Use an appropriate version number
)

# Add Bazel dependencies for rules
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.36.0")
bazel_dep(name = "rules_nodejs", version = "6.3.5")

# Archive override for external dependencies not yet using Bazel module system
#archive_override(
#    module_name = "rules_oci",
#    urls = ["https://github.com/bazel-contrib/rules_oci/releases/download/v0.4.0/rules_oci-v0.4.0.tar.gz"],
#    strip_prefix = "rules_oci-0.4.0",
#    integrity = "sha256-d7b0760ba28554b71941ea0bbfd0a9f089bf250fd4448f9c116e1cb7a63b3933",
#)

# Add Go dependencies directly
bazel_dep(name = "jwtv4", version = "v4.4.2")
bazel_dep(name = "jwtgo", version = "v3.2.0+incompatible")

# Use archive_override if necessary
archive_override(
    module_name = "jwtv4",
    urls = ["github.com/golang-jwt/jwt/v4"],
    #integrity = "sha256-...",
    #strip_prefix = "path/to/repo",
)

# Use archive_override if necessary
archive_override(
    module_name = "jwt-go",
    urls = ["github.com/dgrijalva/jwt-go"],
    #integrity = "sha256-...",
    #strip_prefix = "path/to/repo",
)