load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "HttpTrigger1",
    embed = [":HttpTrigger1Lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/HttpTrigger1",
    visibility = ["//visibility:public"],
)

go_library(
    name = "HttpTrigger1Lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/HttpTrigger1",
    visibility = ["//visibility:private"],
    deps = [
    ],
)
