load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "authorizer2",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/authorizer2",
    visibility = ["//visibility:public"]
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/authorizer2",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_lestrrat_go_jwx//jwk:go_default_library"
    ],
)
