load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "chat",
    embed = [":chat_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/chat",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "chat_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/chat",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/entity",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/apigatewaymanagementapi",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_gocql_gocql//:gocql",
        "@com_github_tangzero_inflector//:inflector",
    ],
)
