load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "entity",
    embed = [":entity_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "entity_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/entity",
        "//lib/sign",
        "//lib/gov",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/signer/v4:go_default_library",
        "@com_github_elastic_go_elasticsearch_v7//:go-elasticsearch",
        "@com_github_opensearch_project_opensearch_go//:opensearch-go",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_tangzero_inflector//:inflector",
        "@com_github_shurcool_githubv4//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//service/cognitoidentityprovider",
        "@com_github_google_go_github_v46//github",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
    ],
)
