load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "entity",
    embed = [":entity_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:public"],
    out = "bootstrap"
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "entity_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/shapeshift",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)
