load("@rules_go//go:def.bzl", "go_binary", "go_library")
#load("@rules_oci//oci:oci.bzl", "oci_image")

# Build the Go library
go_library(
    name = "entity_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/shapeshift",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

# Build the Go binary
go_binary(
    name = "entity",
    embed = [":entity_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/entity",
    visibility = ["//visibility:public"],
    out = "bootstrap",  # Output binary name
)