load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "media",
    embed = [":media_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/media",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "media_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/media",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/utils",
        "//lib/repo",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
        "@org_golang_x_oauth2//:go_default_library",
        "@com_github_shurcool_githubv4//:go_default_library",
        "@com_github_google_go_github_v46//github",
    ],
)
