load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "proxy",
    embed = [":proxy_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/proxy",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "proxy_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/proxy",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)
