load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "stream",
    embed = [":stream_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/stream",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "stream_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/stream",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/entity",
        "//lib/utils",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_gocql_gocql//:gocql",
    ],
)
