load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "user",
    embed = [":user_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/api/user",
    visibility = ["//visibility:public"],
)
#go_test(
#    name = "mainTest",
#    srcs = ["main_test.go"],
#)

go_library(
    name = "user_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/api/user",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/entity",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/cognitoidentityprovider",
        "@com_github_aws_aws_sdk_go//service/ses",
        "@org_golang_x_oauth2//:go_default_library",
        "@com_github_google_go_github_v46//github",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_sethvargo_go_password//password",
    ],
)
