load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "convert_media",
    embed = [":convert_media_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/func/convert_media",
    visibility = ["//visibility:public"],
)

go_library(
    name = "convert_media_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/func/convert_media",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//service/lambda",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager",
    ],
)
