load("@npm//@bazel/esbuild:index.bzl", "esbuild")

esbuild(
    name = "css_to_json",
    entry_point = "index.js",
    target = "node10",
    deps = [
      "@npm//cssparser",
    ],
    platform = "node",
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
    })
)