load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/func/hello_world",
    visibility = ["//visibility:public"],
)

go_library(
    name = "hello_world_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/func/hello_world",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)
