load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "index_profile",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/func/index_profile",
    visibility = ["//visibility:public"]
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "goclassifieds/func/index_profile",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/profiles",
        "//lib/entity",
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_elastic_go_elasticsearch_v7//:go_default_library",
    ],
)