load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "invocation_failure",
    embed = [":invocation_failure_lib"],
    goarch = "amd64",
    goos = "linux",
    importpath = "goclassifieds/func/invocation_failure",
    visibility = ["//visibility:public"],
)

go_library(
    name = "invocation_failure_lib",
    srcs = ["main.go"],
    importpath = "goclassifieds/func/invocation_failure",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)
